--- a/CMake-STM32F103C8T6.ioc
+++ b/CMake-STM32F103C8T6.ioc
@@ -3,30 +3,33 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 File.Version=6
-GPIO.groupedBy=
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F103C8T6
 Mcu.Family=STM32F1
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IP3=TIM3
-Mcu.IP4=USART1
-Mcu.IPNb=5
+Mcu.IP3=TIM1
+Mcu.IP4=TIM3
+Mcu.IP5=USART1
+Mcu.IPNb=6
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin10=PB7
+Mcu.Pin11=VP_SYS_VS_Systick
+Mcu.Pin12=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin2=PD0-OSC_IN
 Mcu.Pin3=PD1-OSC_OUT
 Mcu.Pin4=PA6
-Mcu.Pin5=PA9
-Mcu.Pin6=PA10
+Mcu.Pin5=PA8
+Mcu.Pin6=PA9
 Mcu.Pin7=PA13
 Mcu.Pin8=PA14
-Mcu.Pin9=VP_SYS_VS_Systick
-Mcu.PinsNb=11
+Mcu.Pin9=PB6
+Mcu.PinsNb=13
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -42,16 +45,23 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM1_CC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA10.Mode=Asynchronous
-PA10.Signal=USART1_RX
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
 PA6.Signal=S_TIM3_CH1
-PA9.Mode=Asynchronous
-PA9.Signal=USART1_TX
+PA8.GPIOParameters=GPIO_PuPd
+PA8.GPIO_PuPd=GPIO_PULLUP
+PA8.Signal=S_TIM1_CH1
+PA9.GPIOParameters=GPIO_PuPd
+PA9.GPIO_PuPd=GPIO_PULLUP
+PA9.Signal=S_TIM1_CH2
+PB6.Mode=Asynchronous
+PB6.Signal=USART1_TX
+PB7.Mode=Asynchronous
+PB7.Signal=USART1_RX
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
@@ -91,7 +101,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.ADCFreqValue=36000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -113,8 +123,20 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=72000000
 RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
+SH.S_TIM1_CH1.0=TIM1_CH1,Encoder_Interface
+SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM1_CH2.0=TIM1_CH2,Encoder_Interface
+SH.S_TIM1_CH2.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
+TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
+TIM1.EncoderMode=TIM_ENCODERMODE_TI1
+TIM1.IC1Filter=15
+TIM1.IC1Prescaler=TIM_ICPSC_DIV1
+TIM1.IC2Filter=15
+TIM1.IC2Prescaler=TIM_ICPSC_DIV1
+TIM1.IPParameters=IC1Prescaler,IC2Prescaler,Prescaler,IC2Filter,IC1Filter,EncoderMode,AutoReloadPreload
+TIM1.Prescaler=2-1
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.CounterMode=TIM_COUNTERMODE_UP
 TIM3.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,Pulse-PWM Generation1 CH1,CounterMode,OCMode_PWM-PWM Generation1 CH1
