--- a/CMake-STM32F103C8T6.ioc
+++ b/CMake-STM32F103C8T6.ioc
@@ -2,33 +2,45 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+Dma.Request0=SPI1_TX
+Dma.RequestsNb=1
+Dma.SPI1_TX.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI1_TX.0.Instance=DMA1_Channel3
+Dma.SPI1_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI1_TX.0.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_TX.0.Mode=DMA_NORMAL
+Dma.SPI1_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI1_TX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_TX.0.Priority=DMA_PRIORITY_LOW
+Dma.SPI1_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
-GPIO.groupedBy=
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F103C8T6
 Mcu.Family=STM32F1
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SPI1
-Mcu.IP3=SYS
-Mcu.IP4=USART1
-Mcu.IPNb=5
+Mcu.IP0=DMA
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SPI1
+Mcu.IP4=SYS
+Mcu.IP5=USART1
+Mcu.IPNb=6
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PA10
-Mcu.Pin11=PA13
-Mcu.Pin12=PA14
+Mcu.Pin10=PB5
+Mcu.Pin11=PB6
+Mcu.Pin12=PB7
 Mcu.Pin13=VP_SYS_VS_tim4
 Mcu.Pin2=PD0-OSC_IN
 Mcu.Pin3=PD1-OSC_OUT
-Mcu.Pin4=PA5
-Mcu.Pin5=PA6
-Mcu.Pin6=PA7
-Mcu.Pin7=PB0
-Mcu.Pin8=PB1
-Mcu.Pin9=PA9
+Mcu.Pin4=PA6
+Mcu.Pin5=PA7
+Mcu.Pin6=PB0
+Mcu.Pin7=PA13
+Mcu.Pin8=PA14
+Mcu.Pin9=PB3
 Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -36,6 +48,7 @@ Mcu.UserName=STM32F103C8Tx
 MxCube.Version=6.12.0
 MxDb.Version=DB.6.0.120
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DMA1_Channel3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -49,30 +62,33 @@ NVIC.TIM4_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:true
 NVIC.TimeBase=TIM4_IRQn
 NVIC.TimeBaseIP=TIM4
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA10.Mode=Asynchronous
-PA10.Signal=USART1_RX
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA5.Mode=TX_Only_Simplex_Unidirect_Master
-PA5.Signal=SPI1_SCK
-PA6.GPIOParameters=GPIO_Label
+PA6.GPIOParameters=PinState,GPIO_Label
 PA6.GPIO_Label=SPI1_CS
 PA6.Locked=true
-PA6.Signal=GPIO_Input
-PA7.Mode=TX_Only_Simplex_Unidirect_Master
-PA7.Signal=SPI1_MOSI
-PA9.Mode=Asynchronous
-PA9.Signal=USART1_TX
+PA6.PinState=GPIO_PIN_SET
+PA6.Signal=GPIO_Output
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=SPI1_DC
+PA7.Locked=true
+PA7.Signal=GPIO_Output
 PB0.GPIOParameters=GPIO_Label
-PB0.GPIO_Label=SPI1_DC
+PB0.GPIO_Label=SPI1_RS
 PB0.Locked=true
 PB0.Signal=GPIO_Output
-PB1.GPIOParameters=GPIO_Label
-PB1.GPIO_Label=SPI1_RS
-PB1.Locked=true
-PB1.Signal=GPIO_Output
+PB3.Mode=TX_Only_Simplex_Unidirect_Master
+PB3.Signal=SPI1_SCK
+PB5.Mode=TX_Only_Simplex_Unidirect_Master
+PB5.Signal=SPI1_MOSI
+PB6.Locked=true
+PB6.Mode=Asynchronous
+PB6.Signal=USART1_TX
+PB7.Locked=true
+PB7.Mode=Asynchronous
+PB7.Signal=USART1_RX
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
@@ -96,7 +112,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=0
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
@@ -112,7 +128,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true
 RCC.ADCFreqValue=36000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -135,9 +151,10 @@ RCC.TimSysFreq_Value=72000000
 RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
+SPI1.CLKPolarity=SPI_POLARITY_HIGH
 SPI1.CalculateBaudRate=18.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPolarity
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 USART1.IPParameters=VirtualMode
