--- a/CMake-STM32F103C8T6.ioc
+++ b/CMake-STM32F103C8T6.ioc
@@ -60,13 +60,18 @@ PA14.Signal=SYS_JTCK-SWCLK
 PA6.Signal=S_TIM3_CH1
 PA8.Signal=S_TIM1_CH1
 PA9.Signal=S_TIM1_CH2
-PB1.GPIOParameters=GPIO_Label
+PB1.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PB1.GPIO_Label=FAN_MOS
+PB1.GPIO_PuPd=GPIO_PULLDOWN
 PB1.Locked=true
+PB1.PinState=GPIO_PIN_RESET
 PB1.Signal=GPIO_Output
-PB2.GPIOParameters=GPIO_Label
+PB2.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PB2.GPIO_Label=ARGB_MOS
+PB2.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB2.GPIO_PuPd=GPIO_PULLDOWN
 PB2.Locked=true
+PB2.PinState=GPIO_PIN_SET
 PB2.Signal=GPIO_Output
 PB6.Mode=Asynchronous
 PB6.Signal=USART1_TX
@@ -134,10 +139,11 @@ SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.CounterMode=TIM_COUNTERMODE_UP
-TIM3.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,Pulse-PWM Generation1 CH1,CounterMode,OCMode_PWM-PWM Generation1 CH1
+TIM3.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,Pulse-PWM Generation1 CH1,CounterMode,OCMode_PWM-PWM Generation1 CH1,OCPolarity_1
 TIM3.OCMode_PWM-PWM\ Generation1\ CH1=TIM_OCMODE_PWM2
+TIM3.OCPolarity_1=TIM_OCPOLARITY_HIGH
 TIM3.Period=100-1
-TIM3.Prescaler=72
+TIM3.Prescaler=25
 TIM3.Pulse-PWM\ Generation1\ CH1=50
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
